working on table

--- a/website-asignment/dashboard.html
+++ b/website-asignment/dashboard.html
@@ -89,20 +89,24 @@
       
       <!-- PARAGRAPH 1 -->
       <section class="item para-1">
-        <table class="content-table">
-      <thead class="border-head">
-        <tr>
-          <td>Quartile</td>
-          <td>Course</td>
-          <td>EC</td>
-          <td>Exam</td>
-          <td>Grade</td>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td rowspan="5">First</td>
-          <td rowspan="2">Programme and Career Orientation</td>
+        <a href="https://hz.nl/uploads/documents/Regelingen/EN/OER-HZ-2019-2020werkdocv2018-05-17DEF_ENGELS-AC-29112019.pdf" target="_" class="nbsa"> 
+          <h1> <i class="fas fa-link"></i> HZ Course and Examination Regulations</h1>
+        </a>
+        <div class="table-container">
+          <table class="content-table">
+            <thead class="border-head">
+              <tr>
+                <td>Quartile</td>
+                <td>Course</td>
+                <td>EC</td>
+                <td>Exam</td>
+                <td>Grade</td>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td rowspan="5">First</td>
+                <td rowspan="2">Programme and Career Orientation</td>
           <td>2.5</td>
           <td>Assesment</td>
           <td></td>
@@ -193,13 +197,14 @@
         </tr>
       </tbody>
     </table>
-      </section>
-      <!-- END OF PARAGRAPH 1 -->
+  </div>
+  </section>
+  <!-- END OF PARAGRAPH 1 -->
 
-      
-
-      <!-- FOOTER -->
-      <footer class="item footer">
+  
+  
+  <!-- FOOTER -->
+  <footer class="item footer">
         <div class="footer-icons">
           <a href="#" class="footer-single-icon">
             <i class="fab fa-facebook"></i>
