--- a/website-asignment/dashboard.html
+++ b/website-asignment/dashboard.html
@@ -96,109 +96,109 @@
           <table class="content-table">
             <thead class="border-head">
               <tr>
-                <td>Quartile</td>
-                <td>Course</td>
-                <td>EC</td>
-                <td>Exam</td>
-                <td>Grade</td>
+                <th>Quartile</th>
+                <th>Course</th>
+                <th>EC</th>
+                <th>Exam</th>
+                <th>Grade</th>
               </tr>
             </thead>
             <tbody>
               <tr>
-                <td rowspan="5">First</td>
+                <td class="quartile" rowspan="5">First</td>
                 <td rowspan="2">Programme and Career Orientation</td>
-          <td>2.5</td>
-          <td>Assesment</td>
-          <td></td>
-        </tr>
-        <tr></tr>
-        <tr>
-          <td rowspan="2">Computer Science</td>
-          <td>7.5</td>
-          <td>Written</td>
-          <td></td>
-        </tr>
-        <tr></tr>
-        <tr>
-          <td>Programming Basics</td>
-          <td>5</td>
-          <td>Case Study</td>
-          <td></td>
-        </tr>
-        <tr>
-          <td rowspan="2">Second</td>
-          <td rowspan="2">Object Oriented Programming</td>
-          <td rowspan="2">10</td>
-          <td>Case Study</td>
-          <td></td>
-        </tr>
-        <tr>
-          <td>Project</td>
-          <td></td>
-        </tr>
-        <tr>
-          <td rowspan="4">Third</td>
-          <td>Framework Dev.1</td>
-          <td>5</td>
-          <td>Case Study</td>
-          <td></td>
-        </tr>
-        <tr>
-          <td rowspan="3">Framework Project 1</td>
-          <td rowspan="3">7.5</td>
-          <td>Project</td>
-          <td></td>
-        </tr>
-        <tr>
-          <td>Assesment</td>
-          <td></td>
-        </tr>
-        <tr>
-          <td>Report</td>
-          <td></td>
-        </tr>
-        <tr>
-          <td rowspan="4">Forth</td>
-          <td rowspan="4">Framework Project 2</td>
-        </tr>
-        <tr>
-          <td rowspan="3">10</td>
-          <td>Portfolio</td>
-          <td></td>
-        </tr>
-        <tr>
-          <td>Project</td>
-          <td></td>
-        </tr>
-        <tr>
-          <td>Assessment</td>
-          <td></td>
-        </tr>
-        <tr>
-          <td>Entire Year</td>
-          <td>Personal Professional Dev</td>
-          <td>12.5</td>
-          <td>Portfolio</td>
-          <td></td>
-        </tr>
-        <tr>
-          <td>Whenever</td>
-          <td>Personality 1</td>
-          <td>1.25</td>
-          <td>Portfolio</td>
-          <td></td>
-        </tr>
-        <tr>
-          <td>Entire Year</td>
-          <td>Personality 2</td>
-          <td>1.25</td>
-          <td>Portfolio</td>
-          <td></td>
-        </tr>
-      </tbody>
-    </table>
-  </div>
-  </section>
+                <td>2.5</td>
+                <td>Assesment</td>
+                <td>TBA</td>
+              </tr>
+              <tr></tr>
+              <tr>
+                <td rowspan="2">Computer Science</td>
+                <td>7.5</td>
+                <td>Written</td>
+                <td>TBA</td>
+              </tr>
+              <tr></tr>
+              <tr>
+                <td>Programming Basics</td>
+                <td>5</td>
+                <td>Case Study</td>
+                <td>TBA</td>
+              </tr>
+              <tr>
+                <td class="quartile" rowspan="2">Second</td>
+                <td rowspan="2">Object Oriented Programming</td>
+                <td rowspan="2">10</td>
+                <td>Case Study</td>
+                <td>TBA</td>
+              </tr>
+              <tr>
+                <td>Project</td>
+                <td>TBA</td>
+              </tr>
+              <tr>
+                <td class="quartile" rowspan="4">Third</td>
+                <td>Framework Dev.1</td>
+                <td>5</td>
+                <td>Case Study</td>
+                <td>TBA</td>
+              </tr>
+              <tr>
+                <td rowspan="3">Framework Project 1</td>
+                <td rowspan="3">7.5</td>
+                <td>Project</td>
+                <td>TBA</td>
+              </tr>
+              <tr>
+                <td>Assesment</td>
+                <td>TBA</td>
+              </tr>
+              <tr>
+                <td>Report</td>
+                <td>TBA</td>
+              </tr>
+              <tr>
+                <td class="quartile" rowspan="4">Forth</td>
+                <td rowspan="4">Framework Project 2</td>
+              </tr>
+              <tr>
+                <td rowspan="3">10</td>
+                <td>Portfolio</td>
+                <td>TBA</td>
+              </tr>
+              <tr>
+                <td>Project</td>
+                <td>TBA</td>
+              </tr>
+              <tr>
+                <td>Assessment</td>
+                <td>TBA</td>
+              </tr>
+              <tr>
+                <td>Entire Year</td>
+                <td>Personal Professional Dev</td>
+                <td>12.5</td>
+                <td>Portfolio</td>
+                <td>TBA</td>
+              </tr>
+              <tr>
+                <td>Whenever</td>
+                <td>Personality 1</td>
+                <td>1.25</td>
+                <td>Portfolio</td>
+                <td>TBA</td>
+              </tr>
+              <tr>
+                <td>Entire Year</td>
+                <td>Personality 2</td>
+                <td>1.25</td>
+                <td>Portfolio</td>
+                <td>TBA</td>
+              </tr>
+          </tbody>
+           </table>
+           </div>
+           </section>
   <!-- END OF PARAGRAPH 1 -->
 
   
