finished blog layout

--- a/website-asignment/blog.html
+++ b/website-asignment/blog.html
@@ -90,59 +90,85 @@
       <!-- PARAGRAPH 1 -->
       <section class="item para-1">
         <header id="banner">
-          <div class="banner-title">
-            <h1 class="banner-text">Daniel Georgiev</h1>
-            <div class="banner-underline"></div>
-            <div class="banner-btn">
-              <button type="button"><a href="./profile.html">More About Me</a> </button>
-              <button type="button"><a href="index.html#target">Why I chose HBO-ICT</a> </button>
+          <div class="blog-content">
+            <!-- one blog -->
+            <div class="card">
+              <div class="icon">
+                <i class="fas fa-home" ></i>
+              </div>
+              <div class="content">
+                <h3>We and Mobile Dev</h3>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officiis consequuntur delectus impedit quos quidem deserunt eligendi quis placeat? Rem nisi corporis veritatis molestias enim tempore repudiandae porro asperiores facere vel consequatur reiciendis itaque illo dolor fugit, pariatur atque? Molestiae distinctio tempore optio. Accusantium at perferendis iure rem quod? Necessitatibus perspiciatis, quod nisi officia nulla dignissimos corrupti perferendis expedita recusandae similique explicabo laborum, provident, a aliquam aspernatur. Magnam ipsum praesentium facilis omnis voluptatem quod aliquid molestias ut corrupti aperiam, sequi harum similique nesciunt commodi quidem vitae in exercitationem laudantium rerum fugiat officia temporibus. Quod tempore quisquam totam ab minima, necessitatibus ullam!</p>
+              </div>
+                  <a href="" class="read-more"></a>
             </div>
+            <!-- end of one blog -->
+            <!-- one blog -->
+            <div class="card">
+              <div class="icon">
+                <i class="fas fa-home "></i>
+              </div>
+              <div class="content">
+                <h3>Customer Support</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores voluptates incidunt deserunt harum iure praesentium vero, temporibus sed libero nostrum molestias neque iusto distinctio illo voluptatum illum ex eius, suscipit nisi reprehenderit doloremque sunt voluptatem sapiente deleniti. Eos, aspernatur. Sed incidunt earum, facilis excepturi laboriosam rerum aspernatur recusandae explicabo debitis culpa voluptates. Temporibus ducimus explicabo beatae culpa unde magni corporis impedit! Facilis esse voluptas odit error amet, laudantium quia debitis iure impedit, laboriosam laborum voluptatibus in! Vitae, deleniti iure delectus, eaque magni dolore ducimus consequuntur cumque porro a error animi amet deserunt modi exercitationem at laborum nisi nostrum saepe corrupti?</p>
+              </div>
+                <a href="" class="read-more"></a>
+            </div>
+            <!-- end of one blog -->
+            <!-- one blog -->
+            <div class="card">
+              <div class="icon">
+                <i class="fas fa-home "></i>
+              </div>
+              <div class="content">
+                <h3>Marketing</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque sequi quibusdam excepturi eligendi minima tempore eaque animi soluta velit odit delectus officia, nobis illo. Nihil, odio qui, omnis possimus tempora ipsa id repellat molestiae voluptates quaerat, odit enim quo distinctio. Molestias eligendi, omnis ducimus voluptates accusamus maxime ad fugiat facere nobis, sunt tempore, vero quo aspernatur. Itaque error eligendi, aliquam nulla doloremque nemo dolores impedit odit accusantium ex! Voluptatibus quod deserunt itaque placeat. Maxime harum dolorum dignissimos inventore, enim culpa ullam eos quasi aliquam ea dolores architecto mollitia exercitationem optio incidunt ex. Doloremque, tempore. Natus quo modi sit adipisci laborum?</p>
+              </div>
+              <a href="" class="read-more"></a>
+            </div>
+            <!-- end of one blog -->
+            <!-- one blog -->
+            <div class="card">
+              <div class="icon">
+                <i class="fas fa-home "></i>
+              </div>
+              <div class="content">
+                <h3>Marketing</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque sequi quibusdam excepturi eligendi minima tempore eaque animi soluta velit odit delectus officia, nobis illo. Nihil, odio qui, omnis possimus tempora ipsa id repellat molestiae voluptates quaerat, odit enim quo distinctio. Molestias eligendi, omnis ducimus voluptates accusamus maxime ad fugiat facere nobis, sunt tempore, vero quo aspernatur. Itaque error eligendi, aliquam nulla doloremque nemo dolores impedit odit accusantium ex! Voluptatibus quod deserunt itaque placeat. Maxime harum dolorum dignissimos inventore, enim culpa ullam eos quasi aliquam ea dolores architecto mollitia exercitationem optio incidunt ex. Doloremque, tempore. Natus quo modi sit adipisci laborum?</p>
+              </div>
+              <a href="" class="read-more"></a>
+            </div>
+            <!-- end of one blog -->
+            <!-- one blog -->
+            <div class="card">
+              <div class="icon">
+                <i class="fas fa-home "></i>
+              </div>
+              <div class="content">
+                <h3>Marketing</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque sequi quibusdam excepturi eligendi minima tempore eaque animi soluta velit odit delectus officia, nobis illo. Nihil, odio qui, omnis possimus tempora ipsa id repellat molestiae voluptates quaerat, odit enim quo distinctio. Molestias eligendi, omnis ducimus voluptates accusamus maxime ad fugiat facere nobis, sunt tempore, vero quo aspernatur. Itaque error eligendi, aliquam nulla doloremque nemo dolores impedit odit accusantium ex! Voluptatibus quod deserunt itaque placeat. Maxime harum dolorum dignissimos inventore, enim culpa ullam eos quasi aliquam ea dolores architecto mollitia exercitationem optio incidunt ex. Doloremque, tempore. Natus quo modi sit adipisci laborum?</p>
+              </div>
+              <a href="" class="read-more"></a>
+            </div>
+            <!-- end of one blog -->
+            <!-- one blog -->
+            <div class="card">
+              <div class="icon">
+                <i class="fas fa-home "></i>
+              </div>
+              <div class="content">
+                <h3>Marketing</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque sequi quibusdam excepturi eligendi minima tempore eaque animi soluta velit odit delectus officia, nobis illo. Nihil, odio qui, omnis possimus tempora ipsa id repellat molestiae voluptates quaerat, odit enim quo distinctio. Molestias eligendi, omnis ducimus voluptates accusamus maxime ad fugiat facere nobis, sunt tempore, vero quo aspernatur. Itaque error eligendi, aliquam nulla doloremque nemo dolores impedit odit accusantium ex! Voluptatibus quod deserunt itaque placeat. Maxime harum dolorum dignissimos inventore, enim culpa ullam eos quasi aliquam ea dolores architecto mollitia exercitationem optio incidunt ex. Doloremque, tempore. Natus quo modi sit adipisci laborum?</p>
+              </div>
+              <a href="" class="read-more"></a>
+            </div>
+            <!-- end of one blog -->
+           
           </div>
         </header>
       </section>
       <!-- END OF PARAGRAPH 1 -->
 
-      <!-- PARAGRAPTH 2 -->
-      <section class="item para-2" id="target">
-        <div id="skills">
-        <div class="skills-container">
-          <!-- single skill  -->
-          <article class="skills-item">
-            <i class="fa fa-code"></i>
-            <h1>Code</h1>
-            <p>Why I chose it</p>
-          </article>
-          <!-- end of   single skill  -->
-          <!-- single skill  -->
-          <article class="skills-item">
-            <i class="fa fa-file"></i>
-            <h1>Documented</h1>
-            <p>Expectations</p>
-          </article>
-          <!-- end of   single skill  -->
-          <!-- single skill  -->
-          <article class="skills-item">
-            <i class="fa fa-map"></i>
-            <h1>Optimized</h1>
-            <p>
-           Lorem ipsum dolor sit amet.
-            </p>
-          </article>
-          <!-- end of   single skill  -->
-          <!-- single skill  -->
-          <article class="skills-item">
-            <i class="fa fa-desktop"></i>
-            <h1>Retina</h1>
-            <p>
-           Lorem ipsum dolor sit amet.
-            </p>
-          </article>
-          <!-- end of   single skill  -->
-        </div>
-    </div>
-    <!-- END OF SKILLS  -->
-      </section>
-      <!-- END OF PARAGRAPTH 2 -->
 
       <!-- FOOTER -->
       <footer class="item footer">
