--- a/website-asignment/blog.html
+++ b/website-asignment/blog.html
@@ -89,6 +89,8 @@
       
       <!-- PARAGRAPH 1 -->
       <section class="item para-1">
+            <h1 class="banner-text">Welcome To My Blog</h1>
+             <div class="banner-underline"></div>
         <header id="banner">
           <div class="blog-content">
             <!-- one blog -->
