working on everything at the momemnt

--- a/website-asignment/blog.html
+++ b/website-asignment/blog.html
@@ -99,7 +99,7 @@
                 <i class="fas fa-home" ></i>
               </div>
               <div class="content">
-                <h3>We and Mobile Dev</h3>
+                <h3>ICT Field of Work</h3>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officiis consequuntur delectus impedit quos quidem deserunt eligendi quis placeat? Rem nisi corporis veritatis molestias enim tempore repudiandae porro asperiores facere vel consequatur reiciendis itaque illo dolor fugit, pariatur atque? Molestiae distinctio tempore optio. Accusantium at perferendis iure rem quod? Necessitatibus perspiciatis, quod nisi officia nulla dignissimos corrupti perferendis expedita recusandae similique explicabo laborum, provident, a aliquam aspernatur. Magnam ipsum praesentium facilis omnis voluptatem quod aliquid molestias ut corrupti aperiam, sequi harum similique nesciunt commodi quidem vitae in exercitationem laudantium rerum fugiat officia temporibus. Quod tempore quisquam totam ab minima, necessitatibus ullam!</p>
               </div>
                   <a href="" class="read-more"></a>
@@ -111,10 +111,10 @@
                 <i class="fas fa-home "></i>
               </div>
               <div class="content">
-                <h3>Customer Support</h3>
+                <h3>SKC First Feedback</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores voluptates incidunt deserunt harum iure praesentium vero, temporibus sed libero nostrum molestias neque iusto distinctio illo voluptatum illum ex eius, suscipit nisi reprehenderit doloremque sunt voluptatem sapiente deleniti. Eos, aspernatur. Sed incidunt earum, facilis excepturi laboriosam rerum aspernatur recusandae explicabo debitis culpa voluptates. Temporibus ducimus explicabo beatae culpa unde magni corporis impedit! Facilis esse voluptas odit error amet, laudantium quia debitis iure impedit, laboriosam laborum voluptatibus in! Vitae, deleniti iure delectus, eaque magni dolore ducimus consequuntur cumque porro a error animi amet deserunt modi exercitationem at laborum nisi nostrum saepe corrupti?</p>
               </div>
-                <a href="" class="read-more"></a>
+                <a href="./blog-posts/first-fb.html" class="read-more"></a>
             </div>
             <!-- end of one blog -->
             <!-- one blog -->
@@ -123,10 +123,10 @@
                 <i class="fas fa-home "></i>
               </div>
               <div class="content">
-                <h3>Marketing</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque sequi quibusdam excepturi eligendi minima tempore eaque animi soluta velit odit delectus officia, nobis illo. Nihil, odio qui, omnis possimus tempora ipsa id repellat molestiae voluptates quaerat, odit enim quo distinctio. Molestias eligendi, omnis ducimus voluptates accusamus maxime ad fugiat facere nobis, sunt tempore, vero quo aspernatur. Itaque error eligendi, aliquam nulla doloremque nemo dolores impedit odit accusantium ex! Voluptatibus quod deserunt itaque placeat. Maxime harum dolorum dignissimos inventore, enim culpa ullam eos quasi aliquam ea dolores architecto mollitia exercitationem optio incidunt ex. Doloremque, tempore. Natus quo modi sit adipisci laborum?</p>
+                  <h3>Programming Experience</h3>
+                <p>All the knowledge I have acquired is due to my own research and curiosity and it is all very basic beginner and introductory thinks. A couple of years ago I started to watch the CS50: Introduction to Computer Science by Harvard University, which really piqued my curiosity and from there I started watching online videos (Beginner Guides/Introduction Courser etc.) mostly in Python and JS. Again, all very basic and beginner-level content, but I must say it really fascinates me and I definitely am eager to learn more.</p>
               </div>
-              <a href="" class="read-more"></a>
+              <a href="./blog-posts/prog-exp.html" class="read-more"></a>
             </div>
             <!-- end of one blog -->
             <!-- one blog -->
@@ -135,10 +135,10 @@
                 <i class="fas fa-home "></i>
               </div>
               <div class="content">
-                <h3>Marketing</h3>
+                <h3>SWOT Analysis</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque sequi quibusdam excepturi eligendi minima tempore eaque animi soluta velit odit delectus officia, nobis illo. Nihil, odio qui, omnis possimus tempora ipsa id repellat molestiae voluptates quaerat, odit enim quo distinctio. Molestias eligendi, omnis ducimus voluptates accusamus maxime ad fugiat facere nobis, sunt tempore, vero quo aspernatur. Itaque error eligendi, aliquam nulla doloremque nemo dolores impedit odit accusantium ex! Voluptatibus quod deserunt itaque placeat. Maxime harum dolorum dignissimos inventore, enim culpa ullam eos quasi aliquam ea dolores architecto mollitia exercitationem optio incidunt ex. Doloremque, tempore. Natus quo modi sit adipisci laborum?</p>
               </div>
-              <a href="" class="read-more"></a>
+              <a href="./blog-posts/swot-a.html" class="read-more"></a>
             </div>
             <!-- end of one blog -->
             <!-- one blog -->
@@ -147,23 +147,23 @@
                 <i class="fas fa-home "></i>
               </div>
               <div class="content">
-                <h3>Marketing</h3>
+                <h3>Study Choise</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque sequi quibusdam excepturi eligendi minima tempore eaque animi soluta velit odit delectus officia, nobis illo. Nihil, odio qui, omnis possimus tempora ipsa id repellat molestiae voluptates quaerat, odit enim quo distinctio. Molestias eligendi, omnis ducimus voluptates accusamus maxime ad fugiat facere nobis, sunt tempore, vero quo aspernatur. Itaque error eligendi, aliquam nulla doloremque nemo dolores impedit odit accusantium ex! Voluptatibus quod deserunt itaque placeat. Maxime harum dolorum dignissimos inventore, enim culpa ullam eos quasi aliquam ea dolores architecto mollitia exercitationem optio incidunt ex. Doloremque, tempore. Natus quo modi sit adipisci laborum?</p>
               </div>
-              <a href="" class="read-more"></a>
+              <a href="./blog-posts/study-ch.html" class="read-more"></a>
             </div>
             <!-- end of one blog -->
             <!-- one blog -->
-            <div class="card">
+            <!-- <div class="card">
               <div class="icon">
                 <i class="fas fa-home "></i>
               </div>
               <div class="content">
-                <h3>Marketing</h3>
+                <h3>My Expectations</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque sequi quibusdam excepturi eligendi minima tempore eaque animi soluta velit odit delectus officia, nobis illo. Nihil, odio qui, omnis possimus tempora ipsa id repellat molestiae voluptates quaerat, odit enim quo distinctio. Molestias eligendi, omnis ducimus voluptates accusamus maxime ad fugiat facere nobis, sunt tempore, vero quo aspernatur. Itaque error eligendi, aliquam nulla doloremque nemo dolores impedit odit accusantium ex! Voluptatibus quod deserunt itaque placeat. Maxime harum dolorum dignissimos inventore, enim culpa ullam eos quasi aliquam ea dolores architecto mollitia exercitationem optio incidunt ex. Doloremque, tempore. Natus quo modi sit adipisci laborum?</p>
               </div>
               <a href="" class="read-more"></a>
-            </div>
+            </div> -->
             <!-- end of one blog -->
            
           </div>
