--- a/website-asignment/blog-posts/study-ch.html
+++ b/website-asignment/blog-posts/study-ch.html
@@ -114,8 +114,7 @@
               </div>
               <h2 class="hobbies__single-hobby-title">Srudy Choice Activities</h2>
               <p class="hobbies__single-hobby-text">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam,
-                quaerat?
+                I chose this programme because of the unique opportunities in regards to learning which it offers. One example would be the teamwork. I consider working in small groups and helping each other something very valuable. Myself being a person without a dense programming background, the possibility to turn to some of my more experienced fellow students sounds very study-friendly. Another reason is the "apply what you learn" logic which this programme follows. In this field especially, putting theory into practice is a great way to learn and understand.
               </p>
             </div>
             <!-- end of single hobby -->
@@ -126,8 +125,7 @@
               </div>
               <h2 class="hobbies__single-hobby-title">After Graduating</h2>
               <p class="hobbies__single-hobby-text">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam,
-                quaerat?
+               I have always considered myself something of a Jack of all trades, so a position as a full stack developer sounds very interesting to me, as it offers the opportunity to keep pace with both front and back end developments and it makes you constantly adapt to changes, which I consider very valuable. But what I would be most happy to do is combine my previous linguistic experience with IT(machine translation, AI.... but that is very far in the future). From this programme, I expect to take the interest I already have in this subject and transform it into experience and knowledge, in a sence, to be the greatest stepping stone. 
               </p>
             </div>
             <!-- end of single hobby -->
@@ -138,8 +136,7 @@
               </div>
               <h2 class="hobbies__single-hobby-title">Motivate My Study</h2>
               <p class="hobbies__single-hobby-text">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam,
-                quaerat?
+               I chose this programme because of the unique opportunities in regards to learning which it offers. One example would be the teamwork. I consider working in small groups and helping each other something very valuable. Myself being a person without a dense programming background, the possibility to turn to some of my more experienced fellow students sounds very study-friendly. Another reason is the "apply what you learn" logic which this programme follows. In this field especially, putting theory into practice is a great way to learn and understand.
               </p>
             </div>
             <!-- end of single hobby -->
