--- a/website-asignment/blog-posts/swot-a.html
+++ b/website-asignment/blog-posts/swot-a.html
@@ -114,8 +114,7 @@
               </div>
               <h2 class="hobbies__single-hobby-title">Threads</h2>
               <p class="hobbies__single-hobby-text">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam,
-                quaerat?
+               Initially, the fact that I am transferring from another country with a different language could be a little bit of a setback, but that is only until the adjustment period passes.  As far as my weaknesses, I am aware that they may cause me some inconveniences in my studies, but I firmly believe that they will not impede me in any way whatsoever to achieve my goals.
               </p>
             </div>
             <!-- end of single hobby -->
@@ -126,8 +125,7 @@
               </div>
               <h2 class="hobbies__single-hobby-title">Opportunities</h2>
               <p class="hobbies__single-hobby-text">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam,
-                quaerat?
+               subject area in which one can never learn everything. Also my ability to instruct myself will be of great help as well, inasmuch as it is a very valuable trait to have in my mind. When it comes to my weaknesses, overthinking can be a double-edged sword, as it can prepare you for situations others may not have considered.
               </p>
             </div>
             <!-- end of single hobby -->
@@ -138,8 +136,7 @@
               </div>
               <h2 class="hobbies__single-hobby-title">Weaknesses</h2>
               <p class="hobbies__single-hobby-text">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam,
-                quaerat?
+               subject area in which one can never learn everything. Also my ability to instruct myself will be of great help as well, inasmuch as it is a very valuable trait to have in my mind. When it comes to my weaknesses, overthinking can be a double-edged sword, as it can prepare you for situations others may not have considered.
               </p>
             </div>
             <!-- end of single hobby -->
@@ -150,8 +147,7 @@
               </div>
               <h2 class="hobbies__single-hobby-title">Strenghts</h2>
               <p class="hobbies__single-hobby-text">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam,
-                quaerat?
+               I am a very good researcher. I am very curious and eager to learn. I love solving problems, even when it takes hours to do so. I also love to teach myself new things and would like to consider myself somewhat of a self-taught person. I am also a very determined person who loves to take on challenges. 
               </p>
             </div>
             <!-- end of single hobby -->
