--- a/website-asignment/blog.html
+++ b/website-asignment/blog.html
@@ -96,7 +96,7 @@
             <!-- one blog -->
             <div class="card">
               <div class="icon">
-                <i class="fas fa-home" ></i>
+                <i class="fab fa-git-alt"></i>
               </div>
               <div class="content">
                 <h3>ICT Field of Work</h3>
@@ -108,7 +108,7 @@
             <!-- one blog -->
             <div class="card">
               <div class="icon">
-                <i class="fas fa-home "></i>
+                <i class="fas fa-comment-dots"></i>
               </div>
               <div class="content">
                 <h3>SKC First Feedback</h3>
@@ -120,7 +120,7 @@
             <!-- one blog -->
             <div class="card">
               <div class="icon">
-                <i class="fas fa-home "></i>
+                <i class="fas fa-terminal"></i>
               </div>
               <div class="content">
                   <h3>Programming Experience</h3>
@@ -132,7 +132,7 @@
             <!-- one blog -->
             <div class="card">
               <div class="icon">
-                <i class="fas fa-home "></i>
+                <i class="fas fa-chart-bar"></i>
               </div>
               <div class="content">
                 <h3>SWOT Analysis</h3>
@@ -144,7 +144,7 @@
             <!-- one blog -->
             <div class="card">
               <div class="icon">
-                <i class="fas fa-home "></i>
+                <i class="fas fa-user-graduate"></i>
               </div>
               <div class="content">
                 <h3>Study Choise</h3>
