--- a/website-asignment/profile.html
+++ b/website-asignment/profile.html
@@ -131,8 +131,7 @@
               </div>
               <h2 class="hobbies__single-hobby-title">Cinema</h2>
               <p class="hobbies__single-hobby-text">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam,
-                quaerat?
+               Enjoying movies has always been one of my side-hobbies. Whenever I have some free time I put on a movie and just lose myself in it. I watch absolutely all kinds of movies, but if I had to describe my taste in cinema it would be a mixture of indie movies and slow-burn movies. My favorite movie so far has been "The Hateful Eight", directed by Quentin Tarantino
               </p>
             </div>
             <!-- end of single hobby -->
@@ -143,8 +142,7 @@
               </div>
               <h2 class="hobbies__single-hobby-title">Reading</h2>
               <p class="hobbies__single-hobby-text">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam,
-                quaerat?
+                I am an avid reader. I read books whenever I have the time. If I do not have the time to read them I listen to audiobooks on the bus, on the plane, or wherever I can. Just like cinema, I enjoy all kinds of books, but recently I have been reading primarily classics. At the moment, I am finishing "Kafka on The Shore" by Haruki Murakami
               </p>
             </div>
             <!-- end of single hobby -->
@@ -155,8 +153,7 @@
               </div>
               <h2 class="hobbies__single-hobby-title">Training</h2>
               <p class="hobbies__single-hobby-text">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam,
-                quaerat?
+                I believe that a healthy body helps our mental and also our physical health, and personally, it has become a habit to work out at the end of the day because it helps me relax and it also gives me a feeling of accomplishment, especially after a long day. Recently, I haven't had much time to work out, but as soon as it is convenient for me I will hit the gym once more.
               </p>
             </div>
             <!-- end of single hobby -->
@@ -167,8 +164,7 @@
               </div>
               <h2 class="hobbies__single-hobby-title">Programming</h2>
               <p class="hobbies__single-hobby-text">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam,
-                quaerat?
+               It goes without saying that programming is one of my passions. I love learning more and the best thing is that the sources of information are endless. I feel like there is always more that one can learn and I always want to do just that. Since I have a linguistic background, subjects like Machine Translation and Learning are of particular interest to me.
               </p>
             </div>
             <!-- end of single hobby -->
@@ -179,8 +175,7 @@
               </div>
               <h2 class="hobbies__single-hobby-title">Collecting Rubber Duckies</h2>
               <p class="hobbies__single-hobby-text">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam,
-                quaerat?
+               This is a rather recent habit of mine. My friends and I started this trend of buying rubber duckies for each other from different countries we have all visited. Initially, we started as a joke, but now every one of my friends does it, so I guess I am a rubber duckie collector now, whether I like it or not.
               </p>
             </div>
             <!-- end of single hobby -->
@@ -191,8 +186,7 @@
               </div>
               <h2 class="hobbies__single-hobby-title">Hiking</h2>
               <p class="hobbies__single-hobby-text">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam,
-                quaerat?
+               Rubber duckie collecting is not the only thig we do with my friends. We also love to go hiking whenever possible. We have gone on camping trips and traveled throughout my whole country, hiking and sleeping in tents. Just before I came to do my studies in Middelburg we climbed the highest peak in my country.
               </p>
             </div>
             <!-- end of single hobby -->
