--- a/website-asignment/blog.html
+++ b/website-asignment/blog.html
@@ -6,19 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Index</title>
     
-    <!-- JAVASCRIPT -->
-
-    <script>
-    function openSideMenu(){
-      document.getElementById("menu").style.width = "200px"
-      document.getElementsByClassName("sidebar").style.marginLeft = "200px"
-    }
-    function closeSideMenu(){
-      document.getElementById("menu").style.width = "0"
-      document.getElementsByClassName("sidebar").style.marginLeft = "0"
-    }
-    </script>
-    
+     <!-- JAVASCRIPT -->
+    <script src="./scripts/main.js"></script>
     <!-- CSS -->
     <link rel="stylesheet" href="./styles/blog.css" />
 
