--- a/website-asignment/faq.html
+++ b/website-asignment/faq.html
@@ -7,18 +7,7 @@
     <title>Index</title>
     
     <!-- JAVASCRIPT -->
-
-    <script>
-    function openSideMenu(){
-      document.getElementById("menu").style.width = "200px"
-      document.getElementsByClassName("sidebar").style.marginLeft = "200px"
-    }
-    function closeSideMenu(){
-      document.getElementById("menu").style.width = "0"
-      document.getElementsByClassName("sidebar").style.marginLeft = "0"
-    }
-    </script>
-    
+    <script src="./scripts/main.js"></script>
     <!-- CSS -->
     <link rel="stylesheet" href="./styles/faq..css" />
 
