--- a/website-asignment/index.html
+++ b/website-asignment/index.html
@@ -6,21 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Index</title>
     
-    <!-- JAVASCRIPT -->
 
-    <script>
-    function openSideMenu(){
-      document.getElementById("menu").style.width = "200px"
-      document.getElementsByClassName("sidebar").style.marginLeft = "200px"
-    }
-    function closeSideMenu(){
-      document.getElementById("menu").style.width = "0"
-      document.getElementsByClassName("sidebar").style.marginLeft = "0"
-    }
-    </script>
-    
     <!-- CSS -->
     <link rel="stylesheet" href="./styles/index.css" />
+    <!-- JAVA -->
+    <script src="./scripts/main.js"></script>
 
     <!-- FONTAWESOME -->
     <link rel="stylesheet" href="./fontawesome-free-5.15.4-web/css/all.css" />
