--- a/website-asignment/blog.html
+++ b/website-asignment/blog.html
@@ -9,6 +9,7 @@
      <!-- JAVASCRIPT -->
     <script src="./scripts/main.js"></script>
     <!-- CSS -->
+    <link rel="stylesheet" href="./styles/main.css">
     <link rel="stylesheet" href="./styles/blog.css" />
 
     <!-- FONTAWESOME -->
