--- a/website-asignment/dashboard.html
+++ b/website-asignment/dashboard.html
@@ -10,6 +10,7 @@
    <!-- JAVASCRIPT -->
     <script src="./scripts/main.js"></script>
     <!-- CSS -->
+    <link rel="stylesheet" href="./styles/main.css">
     <link rel="stylesheet" href="./styles/dashboard.css" />
 
     <!-- FONTAWESOME -->
