--- a/website-asignment/index.html
+++ b/website-asignment/index.html
@@ -8,6 +8,7 @@
     
 
     <!-- CSS -->
+    <link rel="stylesheet" href="./styles/main.css">
     <link rel="stylesheet" href="./styles/index.css" />
     <!-- JAVA -->
     <script src="./scripts/main.js"></script>
