--- a/website-asignment/index.html
+++ b/website-asignment/index.html
@@ -137,16 +137,16 @@
       <!-- FOOTER -->
       <footer class="item footer">
         <div class="footer-icons">
-          <a href="#" class="footer-single-icon">
+          <a href="https://www.facebook.com/daniel.cvetanov.92" class="footer-single-icon" target="_">
             <i class="fab fa-facebook"></i>
           </a>
-          <a href="#" class="footer-single-icon">
+          <a href="https://www.instagram.com/cvetanovdaniel/" target="_" class="footer-single-icon">
             <i class="fab fa-instagram"></i>
           </a>
-          <a href="#" class="footer-single-icon">
+          <a href="https://www.linkedin.com/in/daniel-georgiev-2171811b5/" target="_" class="footer-single-icon">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a href="#" class="footer-single-icon">
+          <a href="https://github.com/geor0014" target="_" class="footer-single-icon">
             <i class="fab fa-github-alt"></i>
           </a>
         </div>
