fixed blog posts css

--- a/website-asignment/blog.html
+++ b/website-asignment/blog.html
@@ -92,7 +92,7 @@
                 <h3>ICT Field of Work</h3>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officiis consequuntur delectus impedit quos quidem deserunt eligendi quis placeat? Rem nisi corporis veritatis molestias enim tempore repudiandae porro asperiores facere vel consequatur reiciendis itaque illo dolor fugit, pariatur atque? Molestiae distinctio tempore optio. Accusantium at perferendis iure rem quod? Necessitatibus perspiciatis, quod nisi officia nulla dignissimos corrupti perferendis expedita recusandae similique explicabo laborum, provident, a aliquam aspernatur. Magnam ipsum praesentium facilis omnis voluptatem quod aliquid molestias ut corrupti aperiam, sequi harum similique nesciunt commodi quidem vitae in exercitationem laudantium rerum fugiat officia temporibus. Quod tempore quisquam totam ab minima, necessitatibus ullam!</p>
               </div>
-                  <a href="" class="read-more"></a>
+                  <a href="./blog-posts/ict-fw.html" class="read-more"></a>
             </div>
             <!-- end of one blog -->
             <!-- one blog -->
