--- a/website-asignment/blog-posts/first-fb.html
+++ b/website-asignment/blog-posts/first-fb.html
@@ -21,6 +21,7 @@
     
     <!-- CSS -->
     <link rel="stylesheet" href="./styles/first-fb.css" />
+    <link rel="stylesheet" href="./styles/main.css" />
 
     <!-- FONTAWESOME -->
     <link rel="stylesheet" href="../fontawesome-free-5.15.4-web/css/all.css" />
