--- a/website-asignment/blog-posts/swot-a.html
+++ b/website-asignment/blog-posts/swot-a.html
@@ -21,7 +21,8 @@
     
     <!-- CSS -->
     <link rel="stylesheet" href="./styles/swot-a.css" />
-
+    <link rel="stylesheet" href="./styles/main.css" />
+    
     <!-- FONTAWESOME -->
     <link rel="stylesheet" href="../fontawesome-free-5.15.4-web/css/all.css" />
   </head>
