--- a/website-asignment/blog.html
+++ b/website-asignment/blog.html
@@ -90,7 +90,7 @@
               </div>
               <div class="content">
                 <h3>ICT Field of Work</h3>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officiis consequuntur delectus impedit quos quidem deserunt eligendi quis placeat? Rem nisi corporis veritatis molestias enim tempore repudiandae porro asperiores facere vel consequatur reiciendis itaque illo dolor fugit, pariatur atque? Molestiae distinctio tempore optio. Accusantium at perferendis iure rem quod? Necessitatibus perspiciatis, quod nisi officia nulla dignissimos corrupti perferendis expedita recusandae similique explicabo laborum, provident, a aliquam aspernatur. Magnam ipsum praesentium facilis omnis voluptatem quod aliquid molestias ut corrupti aperiam, sequi harum similique nesciunt commodi quidem vitae in exercitationem laudantium rerum fugiat officia temporibus. Quod tempore quisquam totam ab minima, necessitatibus ullam!</p>
+                <p>An outstanding analyst is the very prerequisite for the success of your data efforts. A solid background in statistics is what brings rigor to data-driven decision-making. A data analyst looks at industry data to answer business-relevant questions and delivers these answers to the relevant teams. Data analysts transform large data sets, form hypotheses, and communicate these to business decision-makers. So they need to demonstrate a strong sense of the processes taking place beyond the data.</p>
               </div>
                   <a href="./blog-posts/ict-fw.html" class="read-more"></a>
             </div>
@@ -126,7 +126,7 @@
               </div>
               <div class="content">
                 <h3>SWOT Analysis</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque sequi quibusdam excepturi eligendi minima tempore eaque animi soluta velit odit delectus officia, nobis illo. Nihil, odio qui, omnis possimus tempora ipsa id repellat molestiae voluptates quaerat, odit enim quo distinctio. Molestias eligendi, omnis ducimus voluptates accusamus maxime ad fugiat facere nobis, sunt tempore, vero quo aspernatur. Itaque error eligendi, aliquam nulla doloremque nemo dolores impedit odit accusantium ex! Voluptatibus quod deserunt itaque placeat. Maxime harum dolorum dignissimos inventore, enim culpa ullam eos quasi aliquam ea dolores architecto mollitia exercitationem optio incidunt ex. Doloremque, tempore. Natus quo modi sit adipisci laborum?</p>
+                <p>  Initially, the fact that I am transferring from another country with a different language could be a little bit of a setback, but that is only until the adjustment period passes.  As far as my weaknesses, I am aware that they may cause me some inconveniences in my studies, but I firmly believe that they will not impede me in any way whatsoever to achieve my goals</p>
               </div>
               <a href="./blog-posts/swot-a.html" class="read-more"></a>
             </div>
@@ -138,7 +138,7 @@
               </div>
               <div class="content">
                 <h3>Study Choise</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque sequi quibusdam excepturi eligendi minima tempore eaque animi soluta velit odit delectus officia, nobis illo. Nihil, odio qui, omnis possimus tempora ipsa id repellat molestiae voluptates quaerat, odit enim quo distinctio. Molestias eligendi, omnis ducimus voluptates accusamus maxime ad fugiat facere nobis, sunt tempore, vero quo aspernatur. Itaque error eligendi, aliquam nulla doloremque nemo dolores impedit odit accusantium ex! Voluptatibus quod deserunt itaque placeat. Maxime harum dolorum dignissimos inventore, enim culpa ullam eos quasi aliquam ea dolores architecto mollitia exercitationem optio incidunt ex. Doloremque, tempore. Natus quo modi sit adipisci laborum?</p>
+                <p>I chose this programme because of the unique opportunities in regards to learning which it offers. One example would be the teamwork. I consider working in small groups and helping each other something very valuable. Myself being a person without a dense programming background, the possibility to turn to some of my more experienced fellow students sounds very study-friendly. Another reason is the "apply what you learn" logic which this programme follows. In this field especially, putting theory into practice is a great way to learn and understand.</p>
               </div>
               <a href="./blog-posts/study-ch.html" class="read-more"></a>
             </div>
