--- a/website-asignment/blog-posts/prog-exp.html
+++ b/website-asignment/blog-posts/prog-exp.html
@@ -105,27 +105,30 @@
 
       <!-- PARAGRAPTH 2 -->
       <section class="item para-2">
+        <h2 class="experience-header">Not Much To Talk About</h2>
           <div class="experience">
-              <h2 class="experience-header">Not Much To Talk About</h2>
               <p class="experience-text">All the knowledge I have acquired is due to my own research and curiosity and it is all very basic beginner and introductory thinks. A couple of years ago I started to watch the CS50: Introduction to Computer Science by Harvard University, which really piqued my curiosity and from there I started watching online videos (Beginner Guides/Introduction Courser etc.) mostly in Python and JS. Again, all very basic and beginner-level content, but I must say it really fascinates me and I definitely am eager to learn more.</p>
+              <div >
+                <img src="./images/experience.png" alt="" class="experience-img">
+              </div>
             </div>
       </section>
       <!-- END OF PARAGRAPTH 2 -->
 
-      <!-- FOOTER -->
+     <!-- FOOTER -->
       <footer class="item footer">
         <div class="footer-icons">
-          <a href="#" class="footer-single-icon">
+          <a href="https://www.facebook.com/daniel.cvetanov.92" class="footer-single-icon" target="_">
             <i class="fab fa-facebook"></i>
           </a>
-          <a href="#" class="footer-single-icon">
+          <a href="https://www.instagram.com/cvetanovdaniel/" target="_" class="footer-single-icon">
             <i class="fab fa-instagram"></i>
           </a>
-          <a href="#" class="footer-single-icon">
-            <i class="fab fa-linkedin"></i>
+          <a href="https://www.linkedin.com/in/daniel-georgiev-2171811b5/" target="_" class="footer-single-icon">
+            <i class="fab fa-linkedin-in"></i>
           </a>
-          <a href="#" class="footer-single-icon">
-            <i class="fab fa-twitter"></i>
+          <a href="https://github.com/geor0014" target="_" class="footer-single-icon">
+            <i class="fab fa-github-alt"></i>
           </a>
         </div>
       </footer>
